# kron_torch

./: .gitignore  README.md  kron_adam.py  kron_stats.py  kron_stats_adam.py  pyproject.toml
kron_torch/: __init__.py  dist_kron.py  dist_onesidedkron.py  dist_test.py  distributed.py  kron.py  kron_g_m.py  kron_m.py  kron_simple.py  kron_test.py  kronos.py
