[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kron-torch"
version = "0.2.4"
description = "An implementation of PSGD Kron optimizer in PyTorch."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Evan Walters" },
    { name = "Omead Pooladzandi" },
    { name = "Xi-Lin Li" },
]
keywords = [
    "python",
    "machine learning",
    "optimization",
    "pytorch",
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch",
    "opt_einsum",
    "triton==3.0.0"
]

[project.urls]
homepage = "https://github.com/evanatyourservice/kron_torch"
repository = "https://github.com/evanatyourservice/kron_torch"
